<resources>
    <string name="app_name">Baking App</string>

    <!-- Placeholders -->
    <string name="step_number_placeholder">Step 1 of 10</string>
    <string name="widget_header_placeholder">Recipe Name</string>
    <string name="no_media_placeholder">There is no video for this step</string>
    <string name="step_placeholder">Step Short Description</string>
    <string name="recipe_icon_placeholder">Recipe Icon</string>
    <string name="recipe_name_placeholder">Recipe Name</string>
    <string name="recipe_servings_placeholder">Servings: 2</string>

    <!-- Content Descriptions -->
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>

    <!-- Widget -->
    <string name="choose_recipe_btn">Choose Recipe</string>
    <string name="app_widget_text">Click here to select a recipe.
        \\nThe ingredients of the recipe will be displayed here after the app has been launched.
    </string>
    <string name="add_widget">Add widget</string>
    <string name="info_ingredients_saved">Return to device\'s home screen to see ingredients saved on the widget</string>
    <string name="info_no_chosen_recipe">Please select a recipe from the options given</string>
    <string name="alert_app_launch">The app needs to be launched first to activate the widget</string>


    <!-- Labels -->
    <string name="ingredients_label">Recipe Ingredients</string>

    <!-- Menu -->
    <string name="menu_refresh">Refresh</string>

    <!-- Display Strings -->
    <string name="display_servings">Servings: %1$d</string>
    <string name="display_no_servings">Servings: <i>unavailable</i></string>
    <string name="display_step_id">%d\u0029\u0020\u0020%s</string>
    <string name="display_ingredient">%1$s\u0020\u0020\u0028%2$s\u0020%3$s\u0029\n</string>
    <string name="display_stepnum">Step %1$d of %2$d</string>

    <!-- Error Messages -->
    <string name="error_recipe_load">Error loading recipes via HTTP request [Status code = %1$d]</string>
    <string name="error_missing_callback">%1$s must implement OnViewClickListener</string>
    <string name="error_invalid_step">There seems to be a problem. The selected recipe step is not identified.</string>

    <!-- Intent Filters -->
    <string name="intent_filter_connectivity_change">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="intent_filter_wifi_state_changed">android.net.wifi.WIFI_STATE_CHANGED</string>

    <!-- Alert Messages -->
    <string name="alert_connectivity_status_ok">Your device is connected to the Internet</string>
    <string name="alert_connectivity_status_not_ok">Your device is not connected to the Internet</string>
    <string name="alert_recipe_load_failure">Failed to load list of recipes. \nCheck if device has connectivity and try again.</string>

    <!-- Recipe Types -->
    <string name="recipe_pie">Pie</string>
    <string name="recipe_cake">Cake</string>
    <string name="recipe_brownie">Brownie</string>
    <string name="recipe_cheesecake">Cheesecake</string>

</resources>
